--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+	box-sizing: border-box;
+}
+/*General styling*/
+html,
+body {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+/*General styling of body*/
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background: #b3c9d9;
+	font-family: Verdana, sans-serif;
+}
