--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <ul id = 'gameBoard'>
   <li *ngFor="let tile of tiles" class="tile" (click)="onSelect(tile)" [class.selected]="tile === selectedTile">
     <i [class]= "tile.class">{{tile.name}}</i>
-    <!--<div class="overlay" [class.show]="tile === selectedTile"></div>-->
+    <div class="overlay" [class.show]="tile === selectedTile"></div>
   </li>
 </ul>
 <button id='newGame' (click)="newGame()">New Game</button>
