--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <h1>Tile Matching Game</h1>
 <p>Click the matching tiles</p>
 
-<ul id = 'gameBoard'>
-  <li *ngFor="let tile of tiles" class="tile" (click)="onSelect(tile)" [class.selected]="tile === selectedTile">
-    <i [class]= "tile.class">{{tile.name}}</i>
-    <div class="overlay" [class.show]="tile === selectedTile"></div>
-  </li>
-</ul>
+<app-gameboard></app-gameboard>
 <button id='newGame' (click)="newGame()">New Game</button>
